fixed nav spacing.

--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -22,11 +22,18 @@
 
 /* Nav links (desktop view) */
 .nav-links {
-  list-style: none;
-  display: flex;
-  gap: 20px;
+  display: flex;              
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none; 
   margin: 0;
   padding: 0;
+  width: 40%; 
+  background-color: #444;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
 }
 
 .nav-links li a {
@@ -103,16 +110,11 @@
     margin-left: 10px;
     padding: 5px 10px;
     background-color: #444;
-    color: white;
     border: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 14px;
     transition: background-color 0.3s ease;
-  }
-  
-  .mute-button:hover {
-    background-color: #666;
   }
   
 }
